fix z-index for backtotop button

--- a/src/components/BackToTop/BackToTop.module.css
+++ b/src/components/BackToTop/BackToTop.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 2rem;
   right: 2rem;
-  z-index: 1000;
+  z-index: 2000;
 }
 
 .button {
@@ -14,7 +14,6 @@
   border: none;
   font-size: 2rem;
   cursor: pointer;
-  text-align: bottom;
   display: flex;
   align-items: center;
   justify-content: center;
