--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,6 +21,14 @@
   color: var(--primary-color);
 }
 
+.navLinks {
+  pointer-events: none;
+}
+
+.navLinks.open {
+  pointer-events: auto;
+}
+
 .active {
   color: var(--primary-color) !important;
   transition: color var(--transition-speed);
@@ -38,7 +46,6 @@
   font-size: 2rem;
   cursor: pointer;
   z-index: 1001;
-  text-align: bottom;
   cursor: pointer;
   transition: var(--transition-speed);
   -webkit-appearance: none;
