--- a/src/components/SocialLinks/SocialLinks.module.css
+++ b/src/components/SocialLinks/SocialLinks.module.css
@@ -19,7 +19,6 @@
   width: 35px;
   height: 35px;
   transition: var(--transition-speed);
-  text-align: bottom;
   cursor: pointer;
 }
 
