--- a/src/components/ThemeToggle/ThemeToggle.module.css
+++ b/src/components/ThemeToggle/ThemeToggle.module.css
@@ -7,7 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: bottom;
   cursor: pointer;
   transition: var(--transition-speed);
   z-index: 1002;
